--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "-": "^0.0.1",
     "@angular/animations": "^16.1.0",
     "@angular/common": "^16.1.0",
     "@angular/compiler": "^16.1.0",
@@ -18,7 +19,11 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@types/three": "^0.155.0",
+    "bootstrap": "^5.3.1",
     "rxjs": "~7.8.0",
+    "save": "^2.9.0",
+    "three": "^0.155.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
